*Fixed issue that test 6 has with shorted version of date
Ideally I would just put them before todoText but this way it fails test number 6 (which is poorly written, because It forces me to not have elements between todoPriority, todoCreatedAt and todoText), which is not even the point of the test- the test is "can sort by priority", which I certainly can even if I have an invisible element between todoCreatedAt and todoText.

--- a/src/style.css
+++ b/src/style.css
@@ -221,7 +221,7 @@ input[type="text"]:focus {
 }
 
 .todo-container * {
-	vertical-align: middle;
+	vertical-align: top;
 }
 
 .view-section > :hover {
@@ -275,15 +275,21 @@ input[type="text"]:focus {
 }
 
 #sort-button {
-	width: 8vmax;
-	height: 4vmax;
-	font-size: 2vmax;
+	width: 7vmax;
+	height: 3vmax;
+	font-size: 1.5vmax;
+}
+
+#add-button {
+	width: 9vmax;
+	height: 3vmax;
+	font-size: 1.5vmax;
 }
 
 #sort-button-for-completed {
-	width: 8vmax;
-	height: 4vmax;
-	font-size: 2vmax;
+	width: 7vmax;
+	height: 3vmax;
+	font-size: 1.5vmax;
 }
 
 #sorting-order-button-for-completed {
@@ -352,6 +358,8 @@ input[type="text"]:focus {
 
 	#todo-created-at-short-version {
 		display: inline-block;
+		float: right;
+		margin: 0 0.5rem;
 	}
 
 	#todo-created-at-long-version {
@@ -360,6 +368,12 @@ input[type="text"]:focus {
 
 	.todo-text {
 		max-width: 36vw;
+	}
+
+	#add-button {
+		width: auto;
+		height: auto;
+		font-size: 13.333px;
 	}
 }
 
